source/tests/errors/old/dot_access_restricted.apex
t = ["one"]
x = t.one